# orbitai_app

./: .gitignore  .gitkeep
Orbit_API/: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements-local.txt
Orbit_API/alembic/versions/: 001_initial_schema.py  002_user_token_usage.py  003_plan_limits.py  004_plan_limit_details.py  005_rag_documents.py  006_plan_ai_stack.py  007_library_generated_files.py  008_library_insight_source_document.py  009_conversation_app_context.py  010_photo_studio_generations.py  011_photo_studio_workspaces.py  012_control_resources.py  013_conversation_orchestration.py  014_conversation_list_indexes.py  015_code_workspace_projects.py  016_code_workspace_user_settings.py  017_code_workspace_preferences.py  018_ai_platform.py
Orbit_API/app/: main.py
Orbit_API/app/api/v1/: router.py
Orbit_API/app/core/: config.py  plan_limits.py  rate_limit.py  security.py
Orbit_API/app/db/: session.py
Orbit_API/app/middleware/: security_headers.py
Orbit_API/app/models/: __init__.py  ai_platform.py
Orbit_API/app/orchestration/: README.md  runner.py
Orbit_API/app/orchestration/multi_agent/: __init__.py  factory.py
Orbit_API/app/schemas/: __init__.py  ai_platform.py
Orbit_API/app/services/: agent_registry.py  library_insights.py  library_store.py  multi_agent_chat.py  multi_agent_stream.py  plan_ai_stack.py  plan_limit_store.py  token_usage.py
Orbit_API/app/worker/: celery_app.py  tasks.py
Orbit_API/docs/: AI_PLATFORM_ARCHITECTURE.md
Orbit_API/scripts/: dev.sh  seed.py
Orbit_UI/: README.md  (+4 more)
(+577 files in other folders)
