[project]
name = "orbit-api"
version = "0.1.0"
description = "Orbit AI backend — multi-agent orchestration API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "sqlalchemy>=2.0.36",
  "psycopg[binary]>=3.2.0",
  "alembic>=1.14.0",
  "pydantic-settings>=2.6.0",
  "email-validator>=2.2.0",
  "python-multipart>=0.0.12",
  "bcrypt>=4.2.0",
  "python-jose[cryptography]>=3.3.0",
  "langchain-openai>=0.3.0",
  "langchain-core>=0.3.0",
  "langgraph>=0.2.0",
  "httpx>=0.28.0",
  "clovai @ file:packages/clovai",
  "clovai-apps @ file:packages/clovai-apps",
  "pypdf>=5.1.0",
  "fastembed>=0.4.2",
  "numpy>=2.1.0",
  "celery[redis]>=5.4.0",
  "redis>=5.2.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"
